create semantic structures in html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
 </head>
 <body>
 
+    <header>
+    </header>
+
+    <nav>
+    </nav>
+
+    <main>
+    </main>
+
+    <section id="about">
+    </section>
+
+    <section id="menu">
+    </section>
+
+    <section id="gallery">
+    </section>
+
+    <section id="location">
+    </section>
+
+    <article id="gifts">
+    </article>
+
+    <article id="events">
+    </article>
+
+    <footer>
+    </footer>
+
 
     <script src="js/main.js"></script>
 </body>
