add basic css styling to tags

--- a/index.html
+++ b/index.html
@@ -11,30 +11,39 @@
 <body>
 
     <header>
+        <h1>Content</h1>
     </header>
 
     <nav>
+        <h1>Content</h1>
     </nav>
 
     <main>
+        <h1>Content</h1>
     </main>
 
     <section id="about">
+        <h1>Content</h1>
     </section>
 
     <section id="menu">
+        <h1>Content</h1>
     </section>
 
     <section id="gallery">
+        <h1>Content</h1>
     </section>
 
     <section id="location">
+        <h1>Content</h1>
     </section>
 
     <article id="gifts">
+        <h1>Content</h1>
     </article>
 
     <article id="events">
+        <h1>Content</h1>
     </article>
 
     <footer>
