add basic navigation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <script src="myscripts.js"></script>
 </head>
 <body>
 
@@ -15,7 +16,18 @@
     </header>
 
     <nav>
-        <h1>Content</h1>
+
+    <div class="menu">
+            <ul class="clearfix">
+              <li><a href="#">Who We Are</a></li>
+              <li><a href="#">Menu</a></li>
+              <li><a href="#">Gallery</a></li>
+              <li><a href="#">Location</a></li>
+              <li><a href="#">Promotions</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">Give</a></li>
+            </ul>
+    </div>
     </nav>
 
     <main>
@@ -43,7 +55,6 @@
     </article>
 
     <article id="events">
-        <h1>Content</h1>
     </article>
 
     <footer>
