--- a/index.html
+++ b/index.html
@@ -16,18 +16,17 @@
     </header>
 
     <nav>
-
-    <div class="menu">
-            <ul>
-              <li><a href="#">Who We Are</a></li>
-              <li><a href="#">Menu</a></li>
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Location</a></li>
-              <li><a href="#">Promotions</a></li>
-              <li><a href="#">Events</a></li>
-              <li><a href="#">Give</a></li>
-            </ul>
-    </div>
+        <div class="menu">
+                <ul>
+                  <li><a href="#">WHO WE ARE</a></li>
+                  <li><a href="#">MENU</a></li>
+                  <li><a href="#">GALLERY</a></li>
+                  <li><a href="#">LOCATION</a></li>
+                  <li><a href="#">PROMOTIONS</a></li>
+                  <li><a href="#">EVENTS</a></li>
+                  <li><a href="#">GIVE</a></li>
+                </ul>
+        </div>
     </nav>
 
     <main>
