add basic h1 styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <script src="myscripts.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arapey" rel="stylesheet">
 </head>
 <body>
 
@@ -30,33 +31,33 @@
     </nav>
 
     <main>
-        <h1>Content</h1>
+        <h1>Who We Are</h1>
     </main>
 
-    <section id="about">
-        <h1>Content</h1>
-    </section>
 
     <section id="menu">
-        <h1>Content</h1>
+        <h1>Menu</h1>
     </section>
 
     <section id="gallery">
-        <h1>Content</h1>
+        <h1>Gallery</h1>
     </section>
 
     <section id="location">
-        <h1>Content</h1>
+        <h1>Location</h1>
     </section>
 
-    <article id="gifts">
-        <h1>Content</h1>
+    <article id="events">
+        <h1>Events</h1>
     </article>
 
-    <article id="events">
+    <article id="gifts">
+        <h1>Give</h1>
     </article>
+
 
     <footer>
+        <h1>Footer</h1>
     </footer>
 
 
