--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <h1>Content</h1>
+        <img alt="logo" title="logo" src="img/cp.png">
     </header>
 
     <nav>
