style headings and hide h1

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <header>
         <img alt="logo" title="logo" src="img/cp.png">
+        <h1 class="hidden">Central Perk</h1>
     </header>
 
     <nav>
@@ -31,34 +32,34 @@
     </nav>
 
     <main>
-        <h1>Who We Are</h1>
+        <h2>Who We Are</h2>
     </main>
 
 
     <section id="menu">
-        <h1>Menu</h1>
+        <h2>Menu</h2>
     </section>
 
     <section id="gallery">
-        <h1>Gallery</h1>
+        <h2>Gallery</h2>
     </section>
 
     <article id="events">
-        <h1>Events</h1>
+        <h2>Events</h2>
     </article>
 
 
     <section id="location">
-        <h1>Location</h1>
+        <h2>Location</h2>
     </section>
 
     <article id="gifts">
-        <h1>Give</h1>
+        <h2>Give</h2>
     </article>
 
 
     <footer>
-        <h1>Footer</h1>
+        <h2>Footer</h2>
     </footer>
 
 
