add intro content to main section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
     <main>
         <h2>Who We Are</h2>
+        <div id="mainc">
+            <p>Welcome to Central Perk, the friendliest cafe in all of Manhattan! Our cafe is the perfect place to sit back, relax, and enjoy a cup o' joe with your closest friends. Our food and drinks are both tasty and affordable, and we offer a casual atmosphere. We even have a comfy couch! Make sure to leave your stress at the door. Don't worry, we'll always be there for you.</p>
+        </div>
     </main>
 
 
