add location content

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
         <h2>Who We Are</h2>
         <div id="mainc">
-            <p>Welcome to Central Perk, the friendliest cafe in all of Manhattan! Our cafe is the perfect place to sit back, relax, and enjoy a cup o' joe with your closest friends. Our food and drinks are both tasty and affordable, and we offer a casual atmosphere. We even have a comfy couch! Make sure to leave your stress at the door. Don't worry, we'll always be there for you.</p>
+            <p>Welcome to Central Perk, the friendliest cafe in all of Manhattan! Our cafe is the perfect place to sit back, relax, and enjoy a cup o' joe with your closest friends. Our food and drinks are both tasty and affordable, and we offer a casual atmosphere. We even have a comfy couch! Make sure to leave your stress at the door. Don't worry, we'll always be there for you. Stop by soon, and bring a friend!</p>
         </div>
     </main>
 
@@ -54,6 +54,13 @@
 
     <section id="location">
         <h2>Location</h2>
+        <div id="locationc">
+            <h3>Hours</h3>
+            <p>Monday - Thursday | 7am - 9pm<p>
+            <p>Friday - Saturday | 7am - 10pm</p>
+            <p>Sunday | 9am - 2pm</p>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12113.455054329548!2d-73.723979!3d40.6218591!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6dd258b302f92674!2sCentral+Perk+Cafe!5e0!3m2!1sen!2sus!4v1492390277563" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </section>
 
     <article id="gifts">
