add content to gift section, style

--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
     </section>
 
     <article id="gifts">
-        <h2>Give</h2>
+        <div id="giftsc">
+            <h3>Gift Cards</h3>
+            <p>Show your friends how much you care by purchasing a Central Perk gift card! Ask our barista, Gunther, how you can purchase one, or send an email to <a href="mailto:friends@centralperk.com">friends@centralperk.com</a>.<p>
+        </div>
+
     </article>
 
 
