--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
             <h3>Gift Cards</h3>
             <p>Show your friends how much you care by purchasing a Central Perk gift card! Ask our barista, Gunther, how you can purchase one, or send an email to <a href="mailto:friends@centralperk.com">friends@centralperk.com</a>.<p>
         </div>
+        <section id="button1">
+            <a href="#" class="hvr-underline-from-center">Give a Gift to A Friend!</a>
+        </section>
 
     </article>
 
