--- a/index.html
+++ b/index.html
@@ -41,6 +41,44 @@
 
     <section id="menu">
         <h2>Menu</h2>
+        <div id="menuc">
+            <h3>Coffee & Tea</h3>
+                <ul>
+                    <li>Fresh Brewed Coffee ........ $2.10</li>
+                    <li>Novus Hot Tea .................. $1.85</li>
+                    <li>Chai Latte .......................... $3.70</li>
+                    <li>Caramel Macchiato .......... $3.85</li>
+                    <li>White Mocha Latte ............ $3.85</li>
+                    <li>Iced Tea ............................. $2.50</li>
+                </ul>
+            <h3>Breakfast</h3>
+                <ul>
+                    <li>Fresh Brewed Coffee ........ $2.10</li>
+                    <li>Novus Hot Tea .................. $1.85</li>
+                    <li>Chai Latte .......................... $3.70</li>
+                    <li>Caramel Macchiato .......... $3.85</li>
+                    <li>White Mocha Latte ............ $3.85</li>
+                    <li>Iced Tea ............................. $2.50</li>
+                </ul>
+            <h3>Lunch</h3>
+                <ul>
+                    <li>Fresh Brewed Coffee ........ $2.10</li>
+                    <li>Novus Hot Tea .................. $1.85</li>
+                    <li>Chai Latte .......................... $3.70</li>
+                    <li>Caramel Macchiato .......... $3.85</li>
+                    <li>White Mocha Latte ............ $3.85</li>
+                    <li>Iced Tea ............................. $2.50</li>
+                </ul>
+            <h3>Desserts</h3>
+                <ul>
+                    <li>Fresh Brewed Coffee ........ $2.10</li>
+                    <li>Novus Hot Tea .................. $1.85</li>
+                    <li>Chai Latte .......................... $3.70</li>
+                    <li>Caramel Macchiato .......... $3.85</li>
+                    <li>White Mocha Latte ............ $3.85</li>
+                    <li>Iced Tea ............................. $2.50</li>
+                </ul>
+        </div>
     </section>
 
     <section id="gallery">
