--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arapey" rel="stylesheet">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 <body>
 
@@ -20,13 +21,13 @@
     <nav>
         <div class="menu">
                 <ul>
-                  <li><a href="#">WHO WE ARE</a></li>
-                  <li><a href="#">MENU</a></li>
-                  <li><a href="#">GALLERY</a></li>
-                  <li><a href="#">LOCATION</a></li>
-                  <li><a href="#">PROMOTIONS</a></li>
-                  <li><a href="#">EVENTS</a></li>
-                  <li><a href="#">GIVE</a></li>
+                  <li><a href="#mainc" class="smoothScroll">WHO WE ARE</a></li>
+                  <li><a href="#menu" class="smoothScroll">MENU</a></li>
+                  <li><a href="#gallery" class="smoothScroll">GALLERY</a></li>
+                  <li><a href="#location" class="smoothScroll">LOCATION</a></li>
+                  <li><a href="#promotions" class="smoothScroll">PROMOTIONS</a></li>
+                  <li><a href="#" class="smoothScroll">EVENTS</a></li>
+                  <li><a href="#" class="smoothScroll">GIVE</a></li>
                 </ul>
         </div>
     </nav>
@@ -83,6 +84,7 @@
 
     <section id="gallery">
         <h2>Gallery</h2>
+</section>
     </section>
 
     <article id="events">
@@ -119,5 +121,6 @@
 
 
     <script src="js/main.js"></script>
+    <script type="text/javascript" src="js/smoothscroll.js"></script>
 </body>
 </html>
