--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arapey" rel="stylesheet">
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+
+
+    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+    <script type='text/javascript' src='unitegallery/js/unitegallery.min.js'></script>
+
+    <link rel="stylesheet" href='unitegallery/css/unite-gallery.css' type='text/css' />
+    <script type='text/javascript' src='unitegallery/themes/default/ug-theme-default.js'></script>
+    <link rel='stylesheet' href='unitegallery/themes/default/ug-theme-default.css' type='text/css' />
+
+    <script type="text/javascript">
+
+        jQuery(document).ready(function(){
+            jQuery("#gallery").unitegallery();
+        });
+
+    </script>
 </head>
 <body>
 
@@ -26,8 +43,8 @@
                   <li><a href="#gallery" class="smoothScroll">GALLERY</a></li>
                   <li><a href="#location" class="smoothScroll">LOCATION</a></li>
                   <li><a href="#promotions" class="smoothScroll">PROMOTIONS</a></li>
-                  <li><a href="#" class="smoothScroll">EVENTS</a></li>
-                  <li><a href="#" class="smoothScroll">GIVE</a></li>
+                  <li><a href="#events" class="smoothScroll">EVENTS</a></li>
+                  <li><a href="#gifts" class="smoothScroll">GIVE</a></li>
                 </ul>
         </div>
     </nav>
@@ -84,6 +101,19 @@
 
     <section id="gallery">
         <h2>Gallery</h2>
+
+        		<div id="gallery" style="display:none;">
+
+        			<img alt="Image 1 Title" src="thumbs/image1.jpg"
+        				data-image="images/image1.jpg"
+        				data-description="Image 1 Description">
+
+        			<img alt="Image 2 Title" src="thumbs/image2.jpg"
+        				data-image="images/image02.jpg"
+        				data-description="Image 2 Description">
+
+        		</div>
+
 </section>
     </section>
 
