fix smooth scroll

--- a/index.html
+++ b/index.html
@@ -11,22 +11,6 @@
     <link href="https://fonts.googleapis.com/css?family=Arapey" rel="stylesheet">
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 
-
-
-    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-    <script type='text/javascript' src='unitegallery/js/unitegallery.min.js'></script>
-
-    <link rel="stylesheet" href='unitegallery/css/unite-gallery.css' type='text/css' />
-    <script type='text/javascript' src='unitegallery/themes/default/ug-theme-default.js'></script>
-    <link rel='stylesheet' href='unitegallery/themes/default/ug-theme-default.css' type='text/css' />
-
-    <script type="text/javascript">
-
-        jQuery(document).ready(function(){
-            jQuery("#gallery").unitegallery();
-        });
-
-    </script>
 </head>
 <body>
 
@@ -152,5 +136,7 @@
 
     <script src="js/main.js"></script>
     <script type="text/javascript" src="js/smoothscroll.js"></script>
+    <script src="//code.jquery.com/jquery.min.js"></script>
+
 </body>
 </html>
