--- a/index.html
+++ b/index.html
@@ -46,39 +46,36 @@
         <div id="menuc">
             <h3>Coffee & Tea</h3>
                 <ul>
-                    <li>Fresh Brewed Coffee ........ $2.10</li>
-                    <li>Novus Hot Tea .................. $1.85</li>
-                    <li>Chai Latte .......................... $3.70</li>
-                    <li>Caramel Macchiato .......... $3.85</li>
-                    <li>White Mocha Latte ............ $3.85</li>
-                    <li>Iced Tea ............................. $2.50</li>
+                    <li>Coffee <span id="space">|</span>freshly brewed<span id="space">|</span>  $2.10</li>
+                    <li>Novus Hot Tea <span id="space">|</span>the best in NY<span id="space">|</span>   $1.85</li>
+                    <li>Chai Latte <span id="space">|</span>infused w/ cinnamon <span id="space">|</span>  $3.70</li>
+                    <li>Caramel Macchiato <span id="space">|</span>topped w/ caramel drizzle <span id="space">|</span> $3.85</li>
+                    <li>White Mocha Latte <span id="space">|</span>a true delight <span id="space">|</span>  $3.85</li>
+                    <li>Iced Tea <span id="space">|</span>lightly sweetened<span id="space">|</span> $2.50</li>
                 </ul>
             <h3>Breakfast</h3>
                 <ul>
-                    <li>Fresh Brewed Coffee ........ $2.10</li>
-                    <li>Novus Hot Tea .................. $1.85</li>
-                    <li>Chai Latte .......................... $3.70</li>
-                    <li>Caramel Macchiato .......... $3.85</li>
-                    <li>White Mocha Latte ............ $3.85</li>
-                    <li>Iced Tea ............................. $2.50</li>
+                    <li>Ham and Cheese Croissant ......... $2.50</li>
+                    <li>French Toast Croissant ................ $2.50</li>
+                    <li>Blueberry Muffin ............................ $1.75</li>
+                    <li>Chocolate Chip Scone .................. $2.00</li>
+                    <li>Fresh Fruit Salad............................ $3.00</li>
+                    <li>Yogurt Parfait ............................... $3.25</li>
                 </ul>
             <h3>Lunch</h3>
                 <ul>
-                    <li>Fresh Brewed Coffee ........ $2.10</li>
-                    <li>Novus Hot Tea .................. $1.85</li>
-                    <li>Chai Latte .......................... $3.70</li>
-                    <li>Caramel Macchiato .......... $3.85</li>
-                    <li>White Mocha Latte ............ $3.85</li>
-                    <li>Iced Tea ............................. $2.50</li>
+                    <li>Caesar Salad ............................. $4.75</li>
+                    <li>Turkey & Brie Melt ..................... $5.25</li>
+                    <li>Grilled Cheese ............................ $4.00</li>
+                    <li>Chicken BLT .............................. $5.50</li>
+                    <li>Veggie Wrap .............................. $4.50</li>
+                    <li>Turkey Club ............................... $5.00</li>
                 </ul>
             <h3>Desserts</h3>
                 <ul>
-                    <li>Fresh Brewed Coffee ........ $2.10</li>
-                    <li>Novus Hot Tea .................. $1.85</li>
-                    <li>Chai Latte .......................... $3.70</li>
-                    <li>Caramel Macchiato .......... $3.85</li>
-                    <li>White Mocha Latte ............ $3.85</li>
-                    <li>Iced Tea ............................. $2.50</li>
+                    <li>Key Lime Pie ............................. $4.10</li>
+                    <li>Fudge Brownie .......................... $3.00</li>
+                    <li>Fresh Baked Cookies ........... $1.00 ea</li>
                 </ul>
         </div>
     </section>
