--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
         <div id="menuc">
             <h3>Coffee & Tea</h3>
                 <ul>
-                    <li>Coffee <span id="space">|</span>freshly brewed<span id="space">|</span>  $2.10</li>
-                    <li>Novus Hot Tea <span id="space">|</span>the best in NY<span id="space">|</span>   $1.85</li>
-                    <li>Chai Latte <span id="space">|</span>infused w/ cinnamon <span id="space">|</span>  $3.70</li>
-                    <li>Caramel Macchiato <span id="space">|</span>topped w/ caramel drizzle <span id="space">|</span> $3.85</li>
-                    <li>White Mocha Latte <span id="space">|</span>a true delight <span id="space">|</span>  $3.85</li>
-                    <li>Iced Tea <span id="space">|</span>lightly sweetened<span id="space">|</span> $2.50</li>
+                    <li>Coffee <span id="space">/</span>freshly brewed<span id="space">/</span>  $2.10</li>
+                    <li>Novus Hot Tea <span id="space">/</span>the best in NY<span id="space">/</span>   $1.85</li>
+                    <li>Chai Latte <span id="space">/</span>infused w/ cinnamon <span id="space">/</span>  $3.70</li>
+                    <li>Caramel Macchiato <span id="space">/</span>topped w/ caramel drizzle <span id="space">/</span> $3.85</li>
+                    <li>White Mocha Latte <span id="space">/</span>a true delight <span id="space">/</span>  $3.85</li>
+                    <li>Iced Tea <span id="space">/</span>lightly sweetened<span id="space">/</span> $2.50</li>
                 </ul>
             <h3>Breakfast</h3>
                 <ul>
-                    <li>Ham and Cheese Croissant ......... $2.50</li>
-                    <li>French Toast Croissant ................ $2.50</li>
-                    <li>Blueberry Muffin ............................ $1.75</li>
-                    <li>Chocolate Chip Scone .................. $2.00</li>
-                    <li>Fresh Fruit Salad............................ $3.00</li>
-                    <li>Yogurt Parfait ............................... $3.25</li>
+                    <li>Ham and Cheese Croissant <span id="space">/</span>flaky and filling<span id="space">/</span> $2.50</li>
+                    <li>French Toast Croissant <span id="space">/</span>sweet and satisfying<span id="space">/</span> $2.50</li>
+                    <li>Blueberry Muffin <span id="space">/</span>baked fresh in-house<span id="space">/</span> $1.75</li>
+                    <li>Chocolate Chip Scone <span id="space">/</span>need we say more?<span id="space">/</span> $2.00</li>
+                    <li>Fresh Fruit Salad<span id="space">/</span>pineapple, strawberries, and kiwi<span id="space">/</span> $3.00</li>
+                    <li>Yogurt Parfait <span id="space">/</span>topped w/ crunchy granola<span id="space">/</span> $3.25</li>
                 </ul>
             <h3>Lunch</h3>
                 <ul>
