format lunch and dessert sections

--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
                 </ul>
             <h3>Lunch</h3>
                 <ul>
-                    <li>Caesar Salad ............................. $4.75</li>
-                    <li>Turkey & Brie Melt ..................... $5.25</li>
-                    <li>Grilled Cheese ............................ $4.00</li>
-                    <li>Chicken BLT .............................. $5.50</li>
-                    <li>Veggie Wrap .............................. $4.50</li>
-                    <li>Turkey Club ............................... $5.00</li>
+                    <li>Caesar Salad <span id="space">/</span>classic and delicious<span id="space">/</span> $4.75</li>
+                    <li>Turkey & Brie Melt <span id="space">/</span>on white or wheat<span id="space">/</span> $5.25</li>
+                    <li>Grilled Cheese <span id="space">/</span>your choice of american or cheddar<span id="space">/</span> $4.00</li>
+                    <li>Chicken BLT <span id="space">/</span>on a ciabatta<span id="space">/</span> $5.50</li>
+                    <li>Veggie Wrap <span id="space">/</span>carrots, red onion, bell pepper<span id="space">/</span> $4.50</li>
+                    <li>Turkey Club <span id="space">/</span>a lunchtime favorite<span id="space">/</span> $5.00</li>
                 </ul>
             <h3>Desserts</h3>
                 <ul>
-                    <li>Key Lime Pie ............................. $4.10</li>
-                    <li>Fudge Brownie .......................... $3.00</li>
-                    <li>Fresh Baked Cookies ........... $1.00 ea</li>
+                    <li>Key Lime Pie <span id="space">/</span>sweet, rich and creamy<span id="space">/</span> $4.10</li>
+                    <li>Fudge Brownie <span id="space">/</span>topped with ice cream<span id="space">/</span> $3.00</li>
+                    <li>Fresh Baked Cookies <span id="space">/</span>chocolate chip, oatmeal, or sugar<span id="space">/</span> $1.00 ea</li>
                 </ul>
         </div>
     </section>
