--- a/index.html
+++ b/index.html
@@ -46,56 +46,43 @@
         <div id="menuc">
             <h3>Coffee & Tea</h3>
                 <ul>
-                    <li>Coffee <span id="space">/</span>freshly brewed<span id="space">/</span>  $2.10</li>
-                    <li>Novus Hot Tea <span id="space">/</span>the best in NY<span id="space">/</span>   $1.85</li>
-                    <li>Chai Latte <span id="space">/</span>infused w/ cinnamon <span id="space">/</span>  $3.70</li>
-                    <li>Caramel Macchiato <span id="space">/</span>topped w/ caramel drizzle <span id="space">/</span> $3.85</li>
-                    <li>White Mocha Latte <span id="space">/</span>a true delight <span id="space">/</span>  $3.85</li>
-                    <li>Iced Tea <span id="space">/</span>lightly sweetened<span id="space">/</span> $2.50</li>
+                    <li>Coffee <span class="space">/</span>freshly brewed<span class="space">/</span>  $2.10</li>
+                    <li>Novus Hot Tea <span class="space">/</span>the best in NY<span class="space">/</span>   $1.85</li>
+                    <li>Chai Latte <span class="space">/</span>infused w/ cinnamon <span class="space">/</span>  $3.70</li>
+                    <li>Caramel Macchiato <span class="space">/</span>topped w/ caramel drizzle <span class="space">/</span> $3.85</li>
+                    <li>White Mocha Latte <span class="space">/</span>a true delight <span class="space">/</span>  $3.85</li>
+                    <li>Iced Tea <span class="space">/</span>lightly sweetened<span class="space">/</span> $2.50</li>
                 </ul>
             <h3>Breakfast</h3>
                 <ul>
-                    <li>Ham and Cheese Croissant <span id="space">/</span>flaky and filling<span id="space">/</span> $2.50</li>
-                    <li>French Toast Croissant <span id="space">/</span>sweet and satisfying<span id="space">/</span> $2.50</li>
-                    <li>Blueberry Muffin <span id="space">/</span>baked fresh in-house<span id="space">/</span> $1.75</li>
-                    <li>Chocolate Chip Scone <span id="space">/</span>need we say more?<span id="space">/</span> $2.00</li>
-                    <li>Fresh Fruit Salad<span id="space">/</span>pineapple, strawberries, and kiwi<span id="space">/</span> $3.00</li>
-                    <li>Yogurt Parfait <span id="space">/</span>topped w/ crunchy granola<span id="space">/</span> $3.25</li>
+                    <li>Ham and Cheese Croissant <span class="space">/</span>flaky and filling<span class="space">/</span> $2.50</li>
+                    <li>French Toast Croissant <span class="space">/</span>sweet and satisfying<span class="space">/</span> $2.50</li>
+                    <li>Blueberry Muffin <span class="space">/</span>baked fresh in-house<span class="space">/</span> $1.75</li>
+                    <li>Chocolate Chip Scone <span class="space">/</span>need we say more?<span class="space">/</span> $2.00</li>
+                    <li>Fresh Fruit Salad<span class="space">/</span>pineapple, strawberries, and kiwi<span class="space">/</span> $3.00</li>
+                    <li>Yogurt Parfait <span class="space">/</span>topped w/ crunchy granola<span class="space">/</span> $3.25</li>
                 </ul>
             <h3>Lunch</h3>
                 <ul>
-                    <li>Caesar Salad <span id="space">/</span>classic and delicious<span id="space">/</span> $4.75</li>
-                    <li>Turkey & Brie Melt <span id="space">/</span>on white or wheat<span id="space">/</span> $5.25</li>
-                    <li>Grilled Cheese <span id="space">/</span>your choice of american or cheddar<span id="space">/</span> $4.00</li>
-                    <li>Chicken BLT <span id="space">/</span>on a ciabatta<span id="space">/</span> $5.50</li>
-                    <li>Veggie Wrap <span id="space">/</span>carrots, red onion, bell pepper<span id="space">/</span> $4.50</li>
-                    <li>Turkey Club <span id="space">/</span>a lunchtime favorite<span id="space">/</span> $5.00</li>
+                    <li>Caesar Salad <span class="space">/</span>classic and delicious<span class="space">/</span> $4.75</li>
+                    <li>Turkey & Brie Melt <span class="space">/</span>on white or wheat<span class="space">/</span> $5.25</li>
+                    <li>Grilled Cheese <span class="space">/</span>your choice of american or cheddar<span class="space">/</span> $4.00</li>
+                    <li>Chicken BLT <span class="space">/</span>on a ciabatta<span class="space">/</span> $5.50</li>
+                    <li>Veggie Wrap <span class="space">/</span>carrots, red onion, bell pepper<span class="space">/</span> $4.50</li>
+                    <li>Turkey Club <span class="space">/</span>a lunchtime favorite<span class="space">/</span> $5.00</li>
                 </ul>
             <h3>Desserts</h3>
                 <ul>
-                    <li>Key Lime Pie <span id="space">/</span>sweet, rich and creamy<span id="space">/</span> $4.10</li>
-                    <li>Fudge Brownie <span id="space">/</span>topped with ice cream<span id="space">/</span> $3.00</li>
-                    <li>Fresh Baked Cookies <span id="space">/</span>chocolate chip, oatmeal, or sugar<span id="space">/</span> $1.00 ea</li>
+                    <li>Key Lime Pie <span class="space">/</span>sweet, rich and creamy<span class="space">/</span> $4.10</li>
+                    <li>Fudge Brownie <span class="space">/</span>topped with ice cream<span class="space">/</span> $3.00</li>
+                    <li>Fresh Baked Cookies <span class="space">/</span>chocolate chip, oatmeal, or sugar<span class="space">/</span> $1.00 ea</li>
                 </ul>
         </div>
     </section>
 
-    <section id="gallery">
+    <section id="gallery1">
         <h2>Gallery</h2>
 
-        		<div id="gallery" style="display:none;">
-
-        			<img alt="Image 1 Title" src="thumbs/image1.jpg"
-        				data-image="images/image1.jpg"
-        				data-description="Image 1 Description">
-
-        			<img alt="Image 2 Title" src="thumbs/image2.jpg"
-        				data-image="images/image02.jpg"
-        				data-description="Image 2 Description">
-
-        		</div>
-
-</section>
     </section>
 
     <article id="events">
@@ -107,7 +94,7 @@
         <h2>Location</h2>
         <div id="locationc">
             <h3>Hours</h3>
-            <p>Monday - Thursday | 7am - 9pm<p>
+            <p>Monday - Thursday | 7am - 9pm</p>
             <p>Friday - Saturday | 7am - 10pm</p>
             <p>Sunday | 9am - 2pm</p>
         </div>
@@ -117,7 +104,7 @@
     <article id="gifts">
         <div id="giftsc">
             <h3>Gift Cards</h3>
-            <p>Show your friends how much you care by purchasing a Central Perk gift card! Ask our barista, Gunther, how you can purchase one, or send an email to <a href="mailto:friends@centralperk.com">friends@centralperk.com</a>.<p>
+            <p>Show your friends how much you care by purchasing a Central Perk gift card! Ask our barista, Gunther, how you can purchase one, or send an email to <a href="mailto:friends@centralperk.com">friends@centralperk.com</a>.</p>
         </div>
         <section id="button1">
             <a href="#" class="hvr-underline-from-center">Give a Gift to A Friend!</a>
