begin to add images to gallery

--- a/index.html
+++ b/index.html
@@ -80,8 +80,18 @@
         </div>
     </section>
 
-    <section id="gallery1">
+    <section id="gallery">
         <h2>Gallery</h2>
+
+        <div class="polaroid">
+          <p>Chocolate Chip Scone</p>
+          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+        </div>
+
+        <div class="polaroid2">
+          <p>Chocolate Chip Scone</p>
+          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+        </div>
 
     </section>
 
