format structure of gallery and add imgs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arapey" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 
 </head>
@@ -86,12 +87,71 @@
         <div class="polaroid">
           <p>Chocolate Chip Scone</p>
           <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
-        </div>
 
-        <div class="polaroid2">
+    </div>
+
+    <div class="polaroid">
           <p>Chocolate Chip Scone</p>
           <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
-        </div>
+
+    </div>
+
+    <div class="polaroid">
+          <p>Chocolate Chip Scone</p>
+          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    </div>
+
+    <div class="polaroid">
+          <p>Chocolate Chip Scone</p>
+          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    </div>
+
+
+<section id="line2">
+    <div class="polaroid2">
+          <p>Chocolate Chip Scone</p>
+          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    </div>
+
+    <div class="polaroid2">
+          <p>Chocolate Chip Scone</p>
+          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    </div>
+
+    <div class="polaroid2">
+          <p>Chocolate Chip Scone</p>
+          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    </div>
+    <div class="polaroid2">
+          <p>Chocolate Chip Scone</p>
+          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    </div>
+
+</section>
+
+
+<section id="line3">
+    <div class="polaroid2">
+          <p>Chocolate Chip Scone</p>
+          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    </div>
+
+    <div class="polaroid2">
+          <p>Chocolate Chip Scone</p>
+          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    </div>
+
+    <div class="polaroid2">
+          <p>Chocolate Chip Scone</p>
+          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    </div>
+    <div class="polaroid2">
+          <p>Chocolate Chip Scone</p>
+          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    </div>
+
+</section>
+
 
     </section>
 
