finish adding images to gallery

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                     <li>Key Lime Pie <span class="space">/</span>sweet, rich and creamy<span class="space">/</span> $4.10</li>
                     <li>Fudge Brownie <span class="space">/</span>topped with ice cream<span class="space">/</span> $3.00</li>
                     <li>Fresh Baked Cookies <span class="space">/</span>chocolate chip, oatmeal, or sugar<span class="space">/</span> $1.00 ea</li>
+                    <li>NY Cheesecake <span class="space">/</span>a hometown favorite<span class="space">/</span> $4.00</li>
                 </ul>
         </div>
     </section>
@@ -91,63 +92,63 @@
     </div>
 
     <div class="polaroid">
-          <p>Chocolate Chip Scone</p>
-          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+          <p>Blueberry Muffin</p>
+          <img src="img/blueberry.jpg" alt="scone" title="blueberry" width="95%"/>
 
     </div>
 
     <div class="polaroid">
-          <p>Chocolate Chip Scone</p>
-          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+          <p>Caramel Macchiato</p>
+          <img src="img/caramel.jpg" alt="caramel macchiato" title="caramel macchiato" width="95%"/>
     </div>
 
     <div class="polaroid">
-          <p>Chocolate Chip Scone</p>
-          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+          <p>Chai Latte</p>
+          <img src="img/chailatte.jpg" alt="chai latte" title="chai latte" width="95%"/>
     </div>
 
 
 <section id="line2">
-    <div class="polaroid2">
-          <p>Chocolate Chip Scone</p>
-          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    <div class="polaroid">
+          <p>French Toast Croissant</p>
+          <img src="img/frenchtoast.jpg" alt="french toast" title="french toast" width="95%"/>
     </div>
 
-    <div class="polaroid2">
-          <p>Chocolate Chip Scone</p>
-          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    <div class="polaroid">
+          <p>Novus Tea</p>
+          <img src="img/novus.jpg" alt="novus tea" title="novus tea" width="95%"/>
     </div>
 
-    <div class="polaroid2">
-          <p>Chocolate Chip Scone</p>
-          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    <div class="polaroid">
+          <p>White Mocha</p>
+          <img src="img/whitemocha.jpg" alt="white mocha" title="white mocha" width="95%"/>
     </div>
-    <div class="polaroid2">
-          <p>Chocolate Chip Scone</p>
-          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    <div class="polaroid">
+          <p>Yogurt Parfait</p>
+          <img src="img/parfait.jpg" alt="yogurt parfait" title="yogurt parfait" width="95%"/>
     </div>
 
 </section>
 
 
 <section id="line3">
-    <div class="polaroid2">
-          <p>Chocolate Chip Scone</p>
-          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    <div class="polaroid">
+          <p>Strawberry Shortcake</p>
+          <img src="img/strawberry.jpg" alt="strawberry shortcake" title="strawberry shortcake" width="95%"/>
     </div>
 
-    <div class="polaroid2">
-          <p>Chocolate Chip Scone</p>
-          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    <div class="polaroid">
+          <p>Apple Pie</p>
+          <img src="img/apple.jpg" alt="apple pie" title="apple pie" width="95%"/>
     </div>
 
-    <div class="polaroid2">
-          <p>Chocolate Chip Scone</p>
-          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    <div class="polaroid">
+          <p>Fudge Brownie</p>
+          <img src="img/brownie.jpg" alt="fudge brownie" title="fudge brownie" width="95%"/>
     </div>
-    <div class="polaroid2">
-          <p>Chocolate Chip Scone</p>
-          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+    <div class="polaroid">
+          <p>New York Cheesecake</p>
+          <img src="img/cheesecake.jpg" alt="cheesecake" title="cheesecake" width="95%"/>
     </div>
 
 </section>
