change location bg image and add reservations

--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
     </article>
 
 
+    <article id="reservations">
+        <h2>Reservations</h2>
+    </article>
+
     <section id="location">
         <h2>Location</h2>
         <div id="locationc">
