add social icons and button in footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-    <header>
+    <header id="top">
         <img alt="logo" title="logo" src="img/cp.png">
         <h1 class="hidden">Central Perk</h1>
     </header>
@@ -192,7 +192,7 @@
             <p>Show your friends how much you care by purchasing a Central Perk gift card! Ask our barista, Gunther, how you can purchase one, or send an email to <a href="mailto:friends@centralperk.com">friends@centralperk.com</a>.</p>
         </div>
         <section id="button1">
-            <a href="#" class="hvr-underline-from-center">Give a Gift to A Friend!</a>
+            <a href="mailto:friends@centralperk.com" class="hvr-underline-from-center">Give a Gift to A Friend!</a>
         </section>
 
     </article>
@@ -205,7 +205,12 @@
             <a href="#" class="fa fa-twitter"></a>
             <a href="#" class="fa fa-yelp"></a>
             <a href="#" class="fa fa-google"></a>
-    </div>
+        </div>
+
+            <section id="button2">
+                <a href="#top" class="hvr-underline-from-center">back to top</a>
+            </section>
+
     </footer>
 
 
