install alertify jquery plugin!

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <!-- social library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- alertify -->
+    <link rel="stylesheet" href="themes/alertify.core.css" />
+    <link rel="stylesheet" href="themes/alertify.default.css" id="toggleCSS" />
 
 </head>
 <body>
@@ -170,6 +173,9 @@
 
     <article id="reservations">
         <h2>Reservations</h2>
+        <div id="reservationc">
+            <a id="alert" class="hvr-underline-from-center" href="#">Make a Reservation</a><br>
+        </div>
     </article>
 
     <section id="location">
@@ -217,6 +223,7 @@
     <script src="js/main.js"></script>
     <script type="text/javascript" src="js/smoothscroll.js"></script>
     <script src="//code.jquery.com/jquery.min.js"></script>
+    <script src="lib/alertify.min.js"></script>
 
 </body>
 </html>
