add notations to javascript

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </ul>
             <h3>Desserts</h3>
                 <ul>
-                    <li>Key Lime Pie <span class="space">/</span>sweet, rich and creamy<span class="space">/</span> $4.10</li>
+                    <li>Strawberry Shortcake <span class="space">/</span>sweet, rich and creamy<span class="space">/</span> $4.10</li>
                     <li>Fudge Brownie <span class="space">/</span>topped with ice cream<span class="space">/</span> $3.00</li>
                     <li>Fresh Baked Cookies <span class="space">/</span>chocolate chip, oatmeal, or sugar<span class="space">/</span> $1.00 ea</li>
                     <li>NY Cheesecake <span class="space">/</span>a hometown favorite<span class="space">/</span> $4.00</li>
