add js and html structure for gift card options

--- a/index.html
+++ b/index.html
@@ -199,8 +199,12 @@
             <h3>Gift Cards</h3>
             <p>Show your friends how much you care by purchasing a Central Perk gift card! Ask our barista, Gunther, how you can purchase one, or send an email to <a href="mailto:friends@centralperk.com">friends@centralperk.com</a>.</p>
         </div>
-        <section id="button1">
-            <a href="mailto:friends@centralperk.com" class="hvr-underline-from-center">Give a Gift to A Friend!</a>
+        <section id="cards">
+            <button id="gunther" class="hvr-underline-from-center">See our gift card options.</button><br><br>
+                <div id="gc10">$10</div>
+                <div id="gc25">$25</div>
+                <div id="gc50" style="width:80px;height:80px;display:none;background-color:blue;">$50</div>
+                <div id="gc100" style="width:80px;height:80px;display:none;background-color:pink;">$100</div>
         </section>
 
     </article>
@@ -225,6 +229,7 @@
     <script src="js/main.js"></script>
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <script src="lib/alertify.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/smoothscroll.js"></script>
 
 
