style gift card options jquery

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                   <li><a href="#mainc" class="smoothScroll">WHO WE ARE</a></li>
                   <li><a href="#cpmenu" class="smoothScroll">MENU</a></li>
                   <li><a href="#gallery" class="smoothScroll">GALLERY</a></li>
-                  <li><a href="#location" class="smoothScroll">LOCATION</a></li>
-                  <li><a href="#reservations" class="smoothScroll">RESERVATIONS</a></li>
                   <li><a href="#events" class="smoothScroll">EVENTS</a></li>
+                   <li><a href="#reservations" class="smoothScroll">RESERVATIONS</a></li>
+                  <li><a href="#location" class="smoothScroll">LOCATION</a></li>
                   <li><a href="#gifts" class="smoothScroll">GIVE</a></li>
                 </ul>
         </div>
@@ -200,11 +200,11 @@
             <p>Show your friends how much you care by purchasing a Central Perk gift card! Ask our barista, Gunther, how you can purchase one, or send an email to <a href="mailto:friends@centralperk.com">friends@centralperk.com</a>.</p>
         </div>
         <section id="cards">
-            <button id="gunther" class="hvr-underline-from-center">See our gift card options.</button><br><br>
-                <div id="gc10">$10</div>
-                <div id="gc25">$25</div>
-                <div id="gc50" style="width:80px;height:80px;display:none;background-color:blue;">$50</div>
-                <div id="gc100" style="width:80px;height:80px;display:none;background-color:pink;">$100</div>
+            <button id="gunther" class="hvr-underline-from-center">See Our Gift Card Options</button><br><br>
+                <div id="gc10"><p>$10</p></div>
+                <div id="gc25"><p>$25</p></div>
+                <div id="gc50"><p>$50</p></div>
+                <div id="gc100"><p>$100</p></div>
         </section>
 
     </article>
@@ -219,8 +219,8 @@
             <a href="#" class="fa fa-google"></a>
         </div>
 
-            <section id="button2">
-                <a href="#top" class="hvr-underline-from-center">back to top</a>
+            <section id="button2" class="hvr-underline-from-center">
+                <a href="#top">back to top</a>
             </section>
 
     </footer>
