edit events section and clean up js

--- a/index.html
+++ b/index.html
@@ -164,11 +164,14 @@
 
     <article id="events">
         <h2>Events</h2>
-
-        <p>JavaScript can show hidden HTML elements.</p>
-
-        <p id="demo" style="display:none">Hello JavaScript!</p>
-        <button type="button">Click Me!</button>
+        <div id="eventsc">
+            <ul>
+                <li>Friday, May 5<span class="space">/</span>Music by Phoebe Buffay</li>
+                <li>Tuesday, May 9<span class="space">/</span>Tea Party</li>
+                <li>Thursday, May 11<span class="space">/</span>Networking Night</li>
+                <li>Friday, May 14<span class="space">/</span>Mother's Day Brunch</li>
+            </ul>
+        </div>
     </article>
 
 
@@ -185,6 +188,7 @@
         <div id="locationc">
             <p>105 Cedarhurst Ave</p>
             <p>Cedarhurst, NY 11516</p>
+            <p>(917) 555-5555</p>
             <h3>Hours</h3>
             <p>Monday - Thursday | 7am - 9pm</p>
             <p>Friday - Saturday | 7am - 10pm</p>
@@ -227,7 +231,6 @@
 
 
     <script src="js/main.js"></script>
-    <script src="http://code.jquery.com/jquery.min.js"></script>
     <script src="lib/alertify.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/smoothscroll.js"></script>
