fix w3c validator errors

--- a/index.html
+++ b/index.html
@@ -93,71 +93,71 @@
 
         <div class="polaroid">
           <p>Chocolate Chip Scone</p>
-          <img src="img/ccscone.jpg" alt="scone" title="scone" width="95%"/>
+          <img src="img/ccscone.jpg" alt="scone" title="scone" width="190px"/>
 
     </div>
 
     <div class="polaroid">
           <p>Blueberry Muffin</p>
-          <img src="img/blueberry.jpg" alt="scone" title="blueberry" width="95%"/>
+          <img src="img/blueberry.jpg" alt="scone" title="blueberry" width="190px"/>
 
     </div>
 
     <div class="polaroid">
           <p>Caramel Macchiato</p>
-          <img src="img/caramel.jpg" alt="caramel macchiato" title="caramel macchiato" width="95%"/>
+          <img src="img/caramel.jpg" alt="caramel macchiato" title="caramel macchiato" width="190"/>
     </div>
 
     <div class="polaroid">
           <p>Chai Latte</p>
-          <img src="img/chailatte.jpg" alt="chai latte" title="chai latte" width="95%"/>
+          <img src="img/chailatte.jpg" alt="chai latte" title="chai latte" width="190"/>
     </div>
 
 
-<section id="line2">
+<div id="line2">
     <div class="polaroid">
           <p>French Toast Croissant</p>
-          <img src="img/frenchtoast.jpg" alt="french toast" title="french toast" width="95%"/>
+          <img src="img/frenchtoast.jpg" alt="french toast" title="french toast" width="190"/>
     </div>
 
     <div class="polaroid">
           <p>Novus Tea</p>
-          <img src="img/novus.jpg" alt="novus tea" title="novus tea" width="95%"/>
+          <img src="img/novus.jpg" alt="novus tea" title="novus tea" width="190"/>
     </div>
 
     <div class="polaroid">
           <p>White Mocha</p>
-          <img src="img/whitemocha.jpg" alt="white mocha" title="white mocha" width="95%"/>
+          <img src="img/whitemocha.jpg" alt="white mocha" title="white mocha" width="190"/>
     </div>
     <div class="polaroid">
           <p>Yogurt Parfait</p>
-          <img src="img/parfait.jpg" alt="yogurt parfait" title="yogurt parfait" width="95%"/>
+          <img src="img/parfait.jpg" alt="yogurt parfait" title="yogurt parfait" width="190"/>
     </div>
 
-</section>
+</div>
 
 
-<section id="line3">
+<div id="line3">
     <div class="polaroid">
           <p>Strawberry Shortcake</p>
-          <img src="img/strawberry.jpg" alt="strawberry shortcake" title="strawberry shortcake" width="95%"/>
+          <img src="img/strawberry.jpg" alt="strawberry shortcake" title="strawberry shortcake" width="190"/>
     </div>
 
     <div class="polaroid">
           <p>Apple Pie</p>
-          <img src="img/apple.jpg" alt="apple pie" title="apple pie" width="95%"/>
+          <img src="img/apple.jpg" alt="apple pie" title="apple pie" width="190"/>
     </div>
 
     <div class="polaroid">
           <p>Fudge Brownie</p>
-          <img src="img/brownie.jpg" alt="fudge brownie" title="fudge brownie" width="95%"/>
+          <img src="img/brownie.jpg" alt="fudge brownie" title="fudge brownie" width="190"/>
     </div>
     <div class="polaroid">
           <p>New York Cheesecake</p>
-          <img src="img/cheesecake.jpg" alt="cheesecake" title="cheesecake" width="95%"/>
+          <img src="img/cheesecake.jpg" alt="cheesecake" title="cheesecake" width="190"/>
     </div>
 
-</section>
+</div>
 
 
     </section>
@@ -165,6 +165,7 @@
     <article id="events">
         <h2>Events</h2>
         <div id="eventsc">
+            <img src="img/phoebe.gif" alt="friends" title="friends"/>
             <ul>
                 <li>Friday, May 5<span class="space">/</span>Music by Phoebe Buffay</li>
                 <li>Tuesday, May 9<span class="space">/</span>Tea Party</li>
@@ -178,7 +179,7 @@
     <article id="reservations">
         <h2>Reservations</h2>
         <div id="reservationc">
-            <img src="img/centralperk.jpg" alert="friends" title="friends"/>
+            <img src="img/centralperk.jpg" alt="friends" title="friends"/>
         </div>
             <a id="alert" class="hvr-underline-from-center" href="#">Make a Reservation</a><br>
     </article>
@@ -194,7 +195,7 @@
             <p>Friday - Saturday | 7am - 10pm</p>
             <p>Sunday | 9am - 2pm</p>
 
-            <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12113.455054329548!2d-73.723979!3d40.6218591!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6dd258b302f92674!2sCentral+Perk+Cafe!5e0!3m2!1sen!2sus!4v1492390277563" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12113.455054329548!2d-73.723979!3d40.6218591!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6dd258b302f92674!2sCentral+Perk+Cafe!5e0!3m2!1sen!2sus!4v1492390277563" width="600" height="450" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
 
