--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <nav>
         <div class="menu">
+            <h2 class="hidden">Navigation</h2>
                 <ul>
                   <li><a href="#mainc" class="smoothScroll">WHO WE ARE</a></li>
                   <li><a href="#cpmenu" class="smoothScroll">MENU</a></li>
@@ -93,13 +94,13 @@
 
         <div class="polaroid">
           <p>Chocolate Chip Scone</p>
-          <img src="img/ccscone.jpg" alt="scone" title="scone" width="190px"/>
+          <img src="img/ccscone.jpg" alt="scone" title="scone" width="190"/>
 
     </div>
 
     <div class="polaroid">
           <p>Blueberry Muffin</p>
-          <img src="img/blueberry.jpg" alt="scone" title="blueberry" width="190px"/>
+          <img src="img/blueberry.jpg" alt="scone" title="blueberry" width="190"/>
 
     </div>
 
@@ -195,7 +196,7 @@
             <p>Friday - Saturday | 7am - 10pm</p>
             <p>Sunday | 9am - 2pm</p>
 
-            <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12113.455054329548!2d-73.723979!3d40.6218591!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6dd258b302f92674!2sCentral+Perk+Cafe!5e0!3m2!1sen!2sus!4v1492390277563" width="600" height="450" frameborder="0" allowfullscreen></iframe>
+            <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12113.455054329548!2d-73.723979!3d40.6218591!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6dd258b302f92674!2sCentral+Perk+Cafe!5e0!3m2!1sen!2sus!4v1492390277563" width="600" height="450"  allowfullscreen></iframe>
         </div>
     </section>
 
@@ -204,13 +205,11 @@
             <h3>Gift Cards</h3>
             <p>Show your friends how much you care by purchasing a Central Perk gift card! Ask our barista, Gunther, how you can purchase one, or send an email to <a href="mailto:friends@centralperk.com">friends@centralperk.com</a>.</p>
         </div>
-        <section id="cards">
             <button id="gunther" class="hvr-underline-from-center">See Our Gift Card Options</button><br><br>
                 <div id="gc10"><p>$10</p></div>
                 <div id="gc25"><p>$25</p></div>
                 <div id="gc50"><p>$50</p></div>
                 <div id="gc100"><p>$100</p></div>
-        </section>
 
     </article>
 
@@ -224,9 +223,9 @@
             <a href="#" class="fa fa-google"></a>
         </div>
 
-            <section id="button2" class="hvr-underline-from-center">
+            <div id="button2" class="hvr-underline-from-center">
                 <a href="#top">back to top</a>
-            </section>
+            </div>
 
     </footer>
 
